fixed overflow issue on mobile

--- a/public/style.scss
+++ b/public/style.scss
@@ -72,7 +72,7 @@ body {
 }
 
 #home > p {
-  width: 648px;
+  width: 100%;
 
   font-family: "Exo 2";
   font-size: 30px;
@@ -223,12 +223,13 @@ body {
 }
 
 .image {
-  width: 632px;
+  width: 384px;
   height: 384px;
 
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 
   @media only screen and (max-width: 600px) {
+    width: 100%;
     height: 196px;
   }
 }
@@ -248,8 +249,6 @@ body {
   }
 
   #home > p {
-    width: 648px;
-
     font-family: "Exo 2";
     font-size: 16px;
     color: #5ed0fa;
